src/objects/booking__Config__c.object
<CustomObject>
    <fields>
        <fullName>booking__Account_Record_Type_name__c</fullName>
        <label>Account Record Type name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Configs</relationshipLabel>
        <relationshipName>Configs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>booking__Accounts_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accounts Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>booking__Activities_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activities Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>booking__Appointment_Custom_type__c</fullName>
        <inlineHelpText>The name for the record type that will be used to store Appointments from BookingBug.</inlineHelpText>
        <label>Appointment Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__BookingBug_App_Id__c</fullName>
        <label>BookingBug App Id</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>booking__BookingBug_App_Key__c</fullName>
        <label>BookingBug App Key</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>booking__BookingBug_Code1__c</fullName>
        <label>BookingBug Code1</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>booking__BookingBug_Code2__c</fullName>
        <label>BookingBug Code2</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>booking__BookingBug_Company_Id__c</fullName>
        <label>BookingBug Company Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__BookingBug_Domain__c</fullName>
        <label>BookingBug Domain</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Booking_Question_Map__c</fullName>
        <label>Booking Question Map</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>booking__Bookingbug_Access_Code__c</fullName>
        <label>BookingBug Access Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Cases_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cases Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>booking__Client_Question_Map__c</fullName>
        <label>Client Question Map</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>booking__Company_Id__c</fullName>
        <label>Company Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Config_Value__c</fullName>
        <label>Config Value</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Contact_Record_Type__c</fullName>
        <label>Contact Record Type name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Contacts_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacts Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>booking__Delete_SF_Objects__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if you want to DELETE the corresponding objects in Salesforce when syncing with BookingBug.</inlineHelpText>
        <label>Delete ojects in Salesforce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>booking__Enable_Chatter_del__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable Chatter Feed for selected integrations.</inlineHelpText>
        <label>Enable Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>booking__Enable_object_cleanup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable this in order to clean BookingBug&apos;s redundant records in order to free space on your organization.</description>
        <inlineHelpText>Enable this in order to clean BookingBug&apos;s redundant records in order to free space on your organization.</inlineHelpText>
        <label>Enable object cleanup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>booking__Event_Custom_Type__c</fullName>
        <inlineHelpText>The name for the standard record type in case you have modified the standard Event object.</inlineHelpText>
        <label>Event Record Type name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Import_Status__c</fullName>
        <label>Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Lead_Record_Type_Name__c</fullName>
        <label>Lead Record Type Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Leads_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leads Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>booking__Opportunities_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opportunities Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>booking__Opprtunity_Record_Type__c</fullName>
        <label>Opprtunity Record Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>booking__Person_Accounts_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Person Accounts Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>booking__Record_no_to_be_deleted__c</fullName>
        <description>How many redundant records to be deleted from BookingBug&apos;s custom objects.</description>
        <inlineHelpText>How many redundant records to be deleted from BookingBug&apos;s custom objects.</inlineHelpText>
        <label>Record no. to be deleted</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>booking__Update_Record_Owners__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Record Owners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>booking__custom_partials__c</fullName>
        <label>Custom Partial URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Config</label>
    <listViews>
        <fullName>booking__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>